fix z-index for loading

--- a/app/frontend/styles/partials/loading.sass
+++ b/app/frontend/styles/partials/loading.sass
@@ -13,7 +13,7 @@
     height: calc(100% + 2em)
     top: -1em
     left: -1em
-    z-index: 30
+    z-index: 20
     opacity: .7
   &:after
     content: "\f110"
@@ -23,7 +23,7 @@
     font: normal normal normal 14px/1 FontAwesome
     font-size: 3.17em
     color: #aaa
-    z-index: 35
+    z-index: 25
     text-rendering: auto
     -webkit-font-smoothing: antialiased
     -moz-osx-font-smoothing: grayscale
